intonation-contour/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intonation-contour
  namespace: linguist-system-backend
  labels:
    app: intonation-contour
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intonation-contour
  template:
    metadata:
      labels:
        app: intonation-contour
    spec:
      containers:
        - name: intonation-contour-container
          image: intonation-contour
          resources:
            limits:
              memory: 1000Mi
              cpu: 1
            requests:
              memory: 500Mi
              cpu: 1
          ports:
            - containerPort: 8076
      imagePullSecrets:
        - name: reg-sample
